--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -329,3 +329,79 @@ main .hero {
   font-weight: 400;
   line-height: 1.53846; /* 153.846% */
 }
+/* ========================Review========================== */
+.Review {
+  padding: 200px 0;
+}
+.Review .review-1 {
+  display: flex;
+  justify-content: space-between;
+}
+.Review .review-1 .image {
+  display: flex;
+}
+.Review .review-1 .image-2 {
+  margin-left: 30px;
+  margin-top: -32px;
+}
+.Review .review-1 .info {
+  max-width: 470px;
+}
+.Review .review-1 .info h2 {
+  color: #171100;
+  font-family: Sen;
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.26316; /* 126.316% */
+  letter-spacing: -0.76px;
+}
+.Review .review-1 .info p {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-family: Poppins;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+
+.Review .review-1 .info .action {
+  margin-top: 32px;
+}
+.Review .review-1 .info .action .btn {
+  background: #ffb900;
+  width: 137px;
+}
+
+.Review .review-2 {
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+.Review .review-2 .info {
+  margin-top: 71px;
+  max-width: 570px;
+}
+.Review .review-2 .info h2 {
+  color: #171100;
+  font-family: Sen;
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.26316; /* 126.316% */
+  letter-spacing: -0.76px;
+}
+.Review .review-2 .info .subtile {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-family: Poppins;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+.Review .review-2 .info .action {
+  margin-top: 32px;
+}
+.Review .review-2 .info .action a {
+  background: #ffb900;
+  width: 137px;
+  height: 50px;
+}
